--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "spoiler-callout",
+	"name": "Spoiler Callout",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Adds spoiler callouts to Obsidian.",
+	"author": "Aaron Barratt",
+	"authorUrl": "https://github.com/banaaron",
 	"isDesktopOnly": false
 }
